<resources>
    <string name="app_name">SpaceMarket</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="usuario">Hello blank fragment</string>
    <string name="password">Hello blank fragment</string>
    <string name="signin">Sign In</string>
    <string name="signout">Sign Up</string>
    <string name="loreimspum">Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit</string>
    <string name="money">56.000,45€</string>
    <string name="ups">¡Ups!</string>
    <string name="voidspacecart">Parece que tu space cart esta vacío</string>
    <string name="reclamacion">Escriba su texto</string>
    <string name="send">Enviar</string>
    <string name="reclamaciontext">Reclamaciones</string>
    <string name="molestias">Lamentamos las molestias</string>
    <string name="cuenta">Cuenta</string>
    <string name="logout">Logout</string>
    <string name="eliminar">Eliminar cuenta</string>
    <string name="tuto">Tutorial</string>
    <string name="interrogante">\?</string>
    <string name="creditcard">Tarjeta de credito</string>
    <string name="pagar">Pagar</string>
    <string name="spacecart">Space cart</string>
    <string name="sol">Sol</string>
    <string name="aceptar">Aceptar</string>
    <string name="realizado">Pago Realizado con exito</string>
    <string name="price">56.000,45€</string>
    <string name="fecha">22/11/2021</string>
    <string name="alan">Alan</string>
    <string name="rodriguez">Alan Rodríguez</string>
    <string name="no">No</string>
    <string name="si">Si</string>
    <string name="estasseguro">¿Estas Seguro?</string>
    <string name="recla">¡Tu reclamacion a sido enviada con exito!</string>
    <string name="user">User</string>
    <string name="pass">Pass</string>
    <string name="sun">Sun</string>

</resources>