<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bottom2Shop"
    android:background="@drawable/star">


    <ImageView
        android:id="@+id/fakenavbartop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="3"
        android:src="@android:drawable/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/fakenavbarbot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="3"
        android:src="@android:drawable/bottom_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <!--android:fontFamily="@font/risqueregular"-->



    <ImageView
        android:id="@+id/imageView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:src="@drawable/rectangulo"
        app:layout_constraintBottom_toTopOf="@+id/imageView31"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/creditbutton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/circulo"
        app:layout_constraintBottom_toBottomOf="@+id/imageView28"
        app:layout_constraintStart_toStartOf="@+id/imageView28"
        app:layout_constraintTop_toTopOf="@+id/imageView28" />

    <ImageView
        android:id="@+id/imageView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:src="@drawable/smallrectangulo"
        app:layout_constraintBottom_toTopOf="@+id/fakenavbarbot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView32"
        android:layout_width="325dp"
        android:layout_height="147dp"
        android:layout_marginStart="62dp"
        android:layout_marginBottom="16dp"
        android:scaleX="1.3"
        android:scaleY="1.3"
        android:src="@drawable/rocket"
        app:layout_constraintBottom_toTopOf="@+id/imageView28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cohetesignin" />

    <TextView
        android:id="@+id/creditbutton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interrogante"
        android:textSize="50dp"
        android:fontFamily="@font/risqueregular"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/creditbutton"
        app:layout_constraintEnd_toEndOf="@+id/creditbutton"
        app:layout_constraintStart_toStartOf="@+id/creditbutton"
        app:layout_constraintTop_toTopOf="@+id/creditbutton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/risqueregular"
        android:text="@string/creditcard"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView28"
        app:layout_constraintStart_toEndOf="@+id/creditbutton"
        app:layout_constraintTop_toTopOf="@+id/imageView28" />

    <TextView
        android:id="@+id/cohetesignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="0.1"
        android:text="@string/spacecart"
        android:textColor="@color/white"
        android:textSize="55dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fakenavbartop" />

    <TextView
        android:id="@+id/ASD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:shadowColor="@color/black"
        android:shadowDx="3"
        android:shadowDy="1"
        android:shadowRadius="0.1"
        android:text="@string/pagar"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView31"
        app:layout_constraintEnd_toEndOf="@+id/imageView31"
        app:layout_constraintStart_toStartOf="@+id/imageView31"
        app:layout_constraintTop_toTopOf="@+id/imageView31" />

    <ImageView
        android:id="@+id/imageView34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:src="@drawable/vidrio"
        app:layout_constraintBottom_toBottomOf="@+id/imageView32"
        app:layout_constraintStart_toStartOf="@+id/imageView32"
        app:layout_constraintTop_toTopOf="@+id/imageView32" />

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/imageView33"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/sun"
        app:layout_constraintStart_toStartOf="@+id/imageView34"
        app:layout_constraintTop_toTopOf="@+id/imageView34"
        app:layout_constraintBottom_toBottomOf="@+id/imageView34"
        app:layout_constraintEnd_toEndOf="@+id/imageView34" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:fontFamily="@font/risqueregular"
        android:shadowColor="@color/black"
        android:shadowDx="4"
        android:shadowDy="2"
        android:shadowRadius="0.1"
        android:text="@string/sol"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/imageView32"
        app:layout_constraintStart_toEndOf="@+id/imageView33"
        app:layout_constraintTop_toTopOf="@+id/imageView32" />



    <!--<include android:id="@+id/fragment_menutopnav"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/fragment_menutopnav"/>

    <include android:id="@+id/fragment_menubotnav"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/fragment_menubotnav"/>-->


</androidx.constraintlayout.widget.ConstraintLayout>