<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".ExclamacionConFoto"
        android:background="@drawable/reclamaciones1">

        <ImageView
            android:id="@+id/imageView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/reclamacionm2"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/imageView25"
            android:layout_width="253dp"
            android:layout_height="195dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/reclamacion5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/imageView26"
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/reclamacion3"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/imageView27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:src="@drawable/foto1circle"
            app:circularflow_radiusInDP="1f"
            app:layout_constraintBottom_toTopOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="50dp"
        tools:ignore="MissingConstraints">

    </androidx.cardview.widget.CardView>

        <EditText
            android:id="@+id/reclamacion"
            android:hint="@string/reclamacion"

            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView23"
            app:layout_constraintStart_toStartOf="@+id/imageView23"
            app:layout_constraintTop_toTopOf="@+id/imageView23"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLength="2000"
            android:maxLines="6"/>

    <TextView
        android:id="@+id/textView10"
        android:layout_width="69dp"
        android:layout_height="69dp"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:text="@string/send"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView26"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imageView26" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="@string/reclamaciontext"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="@+id/imageView25"
            app:layout_constraintStart_toStartOf="@+id/imageView25"
            app:layout_constraintTop_toTopOf="@+id/imageView25" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="135dp"
            android:layout_height="44dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/molestias"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/imageView25"
            app:layout_constraintStart_toStartOf="@+id/imageView25"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:scaleX="2.4"

            android:src="@android:drawable/bottom_bar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="parent"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="3"
            android:src="@android:drawable/bottom_bar"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include android:id="@+id/fragment_menutopnav"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            layout="@layout/fragment_menutopnav"/>

        <include android:id="@+id/fragment_menubotnav"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            layout="@layout/fragment_menubotnav"/>

    </androidx.constraintlayout.widget.ConstraintLayout>