<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Bottom2ShopFinal"
    android:background="@color/white">


    <ImageView
        android:id="@+id/fakenavbartop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="3"
        android:src="@android:drawable/bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/fakenavbarbot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleX="3"
        android:src="@android:drawable/bottom_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/imageView30"
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:scaleX="2"
        android:src="@drawable/greenrectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fakenavbartop" />

    <ImageView
        android:id="@+id/imageView35"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/whitecircle"
        app:layout_constraintBottom_toTopOf="@+id/fakenavbarbot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fakenavbartop" />

    <ImageView
        android:id="@+id/imageView36"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/greencircle"
        app:layout_constraintBottom_toBottomOf="@+id/imageView35"
        app:layout_constraintEnd_toEndOf="@+id/imageView35"
        app:layout_constraintStart_toStartOf="@+id/imageView35"
        app:layout_constraintTop_toTopOf="@+id/imageView35" />

    <ImageView
        android:id="@+id/imageView37"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/tick"
        app:layout_constraintBottom_toBottomOf="@+id/imageView36"
        app:layout_constraintEnd_toEndOf="@+id/imageView36"
        app:layout_constraintStart_toStartOf="@+id/imageView36"
        app:layout_constraintTop_toTopOf="@+id/imageView36" />

    <ImageView
        android:id="@+id/imageView38"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pdf"
        app:layout_constraintBottom_toTopOf="@+id/fakenavbarbot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView36" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/realizado"
        android:fontFamily="@font/risqueregular"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fakenavbartop" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:fontFamily="@font/risqueregular"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView35"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fakenavbartop" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fecha"
        android:fontFamily="@font/risqueregular"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView35"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
</androidx.constraintlayout.widget.ConstraintLayout>