<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn"
    app:flexWrap="wrap">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/gifImageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rotation="90"
            android:scaleX="2"
            android:scaleY="2"
            android:src="@drawable/intro"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"></pl.droidsonroids.gif.GifImageView>

        <!--<ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="3.2"
            android:scaleY="3.2"
            android:src="@drawable/intro"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />-->

        <Button
            android:id="@+id/loginbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/rectangleblue"
            android:text="@string/signin"
            android:textColor="@color/black"
            android:theme="@style/Platform.MaterialComponents.Light"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView13" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:src="@drawable/usuario"
            app:layout_constraintBottom_toTopOf="@+id/imageView13"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="@string/usuario"
            android:backgroundTint="#80FFFFFF"


            android:hint="Username"
            android:inputType="textEmailAddress"

            app:layout_constraintBottom_toBottomOf="@+id/imageView12"
            app:layout_constraintEnd_toEndOf="@+id/imageView12"
            app:layout_constraintStart_toEndOf="@+id/usuario"
            app:layout_constraintTop_toTopOf="@+id/imageView12" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/usuario"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="@string/password"
            android:backgroundTint="#80FFFFFF"


            android:hint="Password"
            android:inputType="textPassword"

            app:layout_constraintBottom_toBottomOf="@+id/imageView13"
            app:layout_constraintEnd_toEndOf="@+id/imageView13"
            app:layout_constraintStart_toEndOf="@+id/contraseña"
            app:layout_constraintTop_toTopOf="@+id/imageView13" />

        <ImageView
            android:id="@+id/usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:src="@drawable/usauriomail"
            app:layout_constraintBottom_toBottomOf="@+id/imageView12"
            app:layout_constraintStart_toStartOf="@+id/imageView12"
            app:layout_constraintTop_toTopOf="@+id/imageView12" />

        <ImageView
            android:id="@+id/contraseña"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:src="@drawable/password"
            app:layout_constraintBottom_toBottomOf="@+id/imageView13"
            app:layout_constraintStart_toStartOf="@+id/imageView13"
            app:layout_constraintTop_toTopOf="@+id/imageView13" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>